--- a/munch-block-aws/build.gradle
+++ b/munch-block-aws/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
     compile project(":munch-block")
-    // AWS
+    // AWS S3
     compile group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.11.56'
 }
