--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,5 @@ rootProject.name = 'munch-utils'
 include 'munch-block'
 include 'munch-block-aws'
 include 'hibernate-utils'
+include 'munch-block-fakes3'
 
