--- a/hibernate-utils/build.gradle
+++ b/hibernate-utils/build.gradle
@@ -1,4 +1,4 @@
-version '5.0.11.Final'
+version '5.0.11.Final.1'
 
 dependencies {
     compile group: 'org.hibernate', name: 'hibernate-core', version: '5.0.11.Final'
