--- a/settings.gradle
+++ b/settings.gradle
@@ -2,7 +2,8 @@ rootProject.name = 'munch-utils'
 
 include 'munch-block'
 include 'munch-block-aws'
-include 'hibernate-utils'
 include 'munch-block-fakes3'
-include 'postgres-utils'
+
+include 'hibernate-utils'
+include 'hibernate-utils:postgres-utils'
 
