--- a/hibernate-utils/build.gradle
+++ b/hibernate-utils/build.gradle
@@ -1,12 +1,20 @@
-version '5.0.11.Final.4'
-
 dependencies {
     compile group: 'org.hibernate', name: 'hibernate-core', version: '5.0.11.Final'
     compile group: 'org.hibernate', name: 'hibernate-entitymanager', version: '5.0.11.Final'
 }
 
-task publishLib {
-    dependsOn 'build'
-    dependsOn 'artifactoryPublish'
-    tasks.findByName('artifactoryPublish').mustRunAfter 'build'
+allprojects {
+    version '5.0.11.Final.6'
+
+    task publishLib {
+        dependsOn 'build'
+        dependsOn 'artifactoryPublish'
+        tasks.findByName('artifactoryPublish').mustRunAfter 'build'
+    }
+}
+
+subprojects {
+    dependencies {
+        compile project(':hibernate-utils')
+    }
 }
