--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ allprojects {
 }
 
 configure(subprojects.findAll { it.name.matches("munch-block(|-.+)") }) {
-    version '1.0.11'
+    version '1.0.12'
 
     task publishLib {
         dependsOn 'build'
@@ -55,7 +55,7 @@ dependencies {
 buildscript {
     repositories {
         maven {
-            url 'http://artifactory.fxloh.com/artifactory/munch-repos'
+            url 'http://fx.artifactory.munchapp.co/artifactory/munch-repos'
             credentials {
                 username = "${artifactory_user}"
                 password = "${artifactory_password}"
