--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,10 @@ allprojects {
 
     group 'com.munch'
 
+    ext.jUnitVersion = '5.2.0'
+    ext.guiceVersion = '4.2.1'
+    ext.awsVersion = '1.11.367'
+
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
     compileJava.options.encoding = 'UTF-8'
@@ -39,7 +43,7 @@ allprojects {
 }
 
 configure(subprojects.findAll { it.name.matches("munch-block(|-.+)") }) {
-    version '1.0.12'
+    version '1.0.13'
 
     task publishLib {
         dependsOn 'build'
